frontend/css/home.css
@import url('base.css');

body {
    background-color: var(--primary-background-color);
}

h1 {
    text-align: center;
    color: var(--primary);
    padding-top: 1em;
    position: absolute;
    top: 10vh;
    left: 0;
    width: 100vw;
}

h2 {
    grid-column: 1 / 13;
    color: var(--primary);
    text-align: center;
    margin-top: 2em;
    margin-bottom: 3em;
}

#cover-image {
    grid-column: 1 / 13;
}

#cover-image img,
#cover-image source {
    width: 100%;
    height: auto;

}

#square-logo {
    grid-column: 2 / 5;
    width: 100%;
    height: auto;
}

#about-segment {
    grid-column: 6 / 12;
    margin-top: 2em;
}

#business-articles {
    grid-column: 2 / 13;
    display: flex;
    flex-direction: column;
}

.business-article {
    text-decoration: none;
    display: flex;
    margin-bottom: 2em;
}

.business-article picture {
    width: 18vw;
}

.business-article img {
    height: auto;
    border-radius: 5px;
}

.business-article div {
    background-color: var(--primary);
    color: white;
    border-radius: 5px;
    width: 30vw;
    height: 30vh;
    padding: 2em;
    margin-top: 4em;
    margin-left: -1.5em;
    box-shadow: var(--shadow);
}

.business-article div p:first-of-type {
    margin-top: 1em;
    margin-bottom: 1em;
}

.business-article div p:last-of-type {
    margin-top: 1em;
    margin-bottom: 1em;
    font-weight: 500;
}

#business-articles a:nth-child(2) {
    margin-left: 12%;
}

#business-articles a:nth-child(3) {
    margin-left: 24%;
}

#business-articles a:nth-child(4) {
    margin-left: 36%;
}

.see-more {
    grid-column: 1 / 13;
    text-align: center;
    text-decoration: none;
    background-color: var(--secondary);
    color: white;
    width: 15vw;
    padding: 1em;
    font-weight: 600;
    font-family: 'Montserrat', sans-serif;
    margin-left: 42.5vw;
    margin-bottom: 3em;
    border-radius: 10px;
}

#body-slogan {
    grid-column: 1 / 13;
    text-align: center;
    background-color: black;
    color: white;
    padding: 1em;
    font-size: 2.5em;
    font-style: italic;
}

#technology-articles {
    grid-column: 2 / 12;
    display: flex;
    flex-wrap: wrap;
    gap: 4%;
    margin-bottom: 4em;
}

.technology-article {
    width: 48%;
    display: flex;
    text-decoration: none;
}

.technology-article picture {
    flex: 1;
}

.technology-article div {
    flex: 1;
    background-color: #C8BFEF;
    box-shadow: var(--shadow);
    color: black;
    padding: 2em;
    border-radius: 5px;
    margin-top: 2em;
    margin-left: -1em;
}

.technology-article div p:first-of-type {
    margin-top: 1em;
    margin-bottom: 1em;
}

.technology-article div p:last-of-type {
    font-weight: 500;
}

.technology-article img {
    height: auto;
    border-radius: 7px;
}

@media (orientation: portrait) {
    h1 {
        width: 100vw;
    }

    h2 {
        grid-column: 1 / 7;
        margin-bottom: 1em;
    }

    #cover-image {
        grid-column: 1 / 7;
    }

    #square-logo {
        grid-column: 2 / 6;
    }

    #about-segment {
        grid-column: 1 / 7;
        margin-left: 1em;
        margin-right: 1em;
    }

    #business-articles {
        grid-column: 1 / 7;
        align-items: center;
    }

    #business-articles a:nth-child(2),
    #business-articles a:nth-child(3),
    #business-articles a:nth-child(4)
    {
        margin-left: 0;
    }

    .business-article {
        flex-direction: column;
    }

    .business-article picture {
        width: 90vw;
    }

    .business-article div {
        width: 60vw;
        height: auto;
        margin-top: -2em;
        margin-left: -3vw;
    }

    .see-more {
        grid-column: 1 / 7;
        width: 45vw;
        margin-left: 27.5vw;
        padding: 1.2em;
        border-radius: 13px;
    }

    #body-slogan {
        grid-column: 1 / 7;
    }

    #technology-articles {
        grid-column: 1 / 7;
        flex-direction: column  ;
        flex-wrap: nowrap;
        align-items: center;
        gap: 0;
        margin-bottom: 0;
    }

    .technology-article {
        width: 90vw;
        flex-direction: column;
        margin-bottom: 2em;
    }

    .technology-article div {
        margin-right: -3vw;
        margin-top: -2em;
        width: 60vw;
        align-self: flex-end;
    }
}

